# COMP345-Project

./: .gitignore  CMakeLists.txt  CampaignDriver.cpp  Character.cpp  Character.h  CharacterCreatorDriver.cpp  CharacterObserverDriver.cpp  CharacterStrategyDriver.cpp  Dice.cpp  Dice.h  Doxyfile  Fighter.cpp  Fighter.h  FighterBuilderDriver.cpp  FindCppUnit.cmake  GameDriver.cpp  GameObserverDriver.cpp  InventoryDriver.cpp  Item.cpp  Item.h  ItemDecoratorDriver.cpp  ItemLoadDriver.cpp  MapBuilderDriver.cpp  MapEditorDriver.cpp  README.md  altDriver.cpp  cell.cpp  cell.h  driver.cpp  item.cpp  item.h  itemContainer.cpp  itemContainer.h  main.cpp  mainDriver.cpp  map-test.cpp  map.cpp  map.h  tore --staged CMakeLists.txt
Builder/FighterBuilder/: FighterBuilder.cpp  FighterBuilder.h
Builder/MapBuilder/: DefaultMapBuilder.h  MapBuilder.cpp  MapBuilder.h
Campaign/: Campaign.cpp  Campaign.h
CampaignEditor/: CampaignEditor.cpp  CampaignEditor.h  DefaultMapBuilder.h  MapBuilder.cpp  MapBuilder.h  MapDirector.h  MapEditor.cpp  MapEditor.h
CampaignSaves/: default_castle.txt  default_dungeon.txt
Character/: Character.cpp  Character.h  Fighter.cpp  Fighter.h
CharacterCreator/: CharacterCreatorUI.cpp  CharacterCreatorUI.h
CharacterSaves/: TestGuyB.csv  steve.csv
Dice/: Dice.cpp  Dice.h  Random.h
Director/FighterDirector/: FighterDirector.cpp  FighterDirector.h
Director/MapDirector/: MapDirector.h
Documentation/: Doxyfile
Documentation/html/: _aggressor_strategy_8cpp.html  _aggressor_strategy_8h.html  _aggressor_strategy_8h_source.html  _armor_8cpp.html  _armor_8h.html  _armor_8h_source.html  _belt_8cpp.html  _belt_8h.html  _belt_8h_source.html  _boots_8cpp.html  _boots_8h.html  _boots_8h_source.html  _bully_fighter_builder_8cpp.html  _bully_fighter_builder_8h.html  _bully_fighter_builder_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _campaign_8cpp.html  _campaign_8h.html  _campaign_8h_source.html  _campaign_driver_8cpp.html  _campaign_editor_8cpp.html  _campaign_editor_8h.html  _campaign_editor_8h_source.html  _cell_test_8cpp.html  _cell_test_8h.html  _cell_test_8h_source.html  _character_8cpp.html  _character_8cpp_source.html  _character_8h.html  _character_8h_source.html  _character_display_8cpp.html  _character_display_8h.html  _character_display_8h_source.html  _character_observer_driver_8cpp.html  _character_strategy_8cpp.html  _character_strategy_8h.html  _character_strategy_8h_source.html  (+319 more)
Documentation/latex/: _aggressor_strategy_8cpp.tex  _aggressor_strategy_8h.tex  _aggressor_strategy_8h_source.tex  _armor_8cpp.tex  _armor_8h.tex  _armor_8h_source.tex  _belt_8cpp.tex  _belt_8h.tex  _belt_8h_source.tex  _boots_8cpp.tex  _boots_8h.tex  _boots_8h_source.tex  _bully_fighter_builder_8cpp.tex  _bully_fighter_builder_8h.tex  _bully_fighter_builder_8h_source.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_compiler_id_8c_source.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_c_x_x_compiler_id_8cpp_source.tex  _campaign_8cpp.tex  _campaign_8h.tex  _campaign_8h_source.tex  _campaign_driver_8cpp.tex  _campaign_editor_8cpp.tex  _campaign_editor_8h.tex  _campaign_editor_8h_source.tex  _cell_test_8cpp.tex  _cell_test_8h.tex  _cell_test_8h_source.tex  _character_8cpp.tex  _character_8cpp_source.tex  _character_8h.tex  _character_8h_source.tex  _character_display_8cpp.tex  _character_display_8h.tex  _character_display_8h_source.tex  _character_observer_driver_8cpp.tex  _character_strategy_8cpp.tex  _character_strategy_8h.tex  _character_strategy_8h_source.tex  (+251 more)
Documentation/xml/: Doxyfile.xml  _c_make_c_compiler_id_8c.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _character_8cpp.xml  _character_8h.xml  _character_test_8cpp.xml  _character_test_8h.xml  _dice_8cpp.xml  _dice_8h.xml  _fighter_8cpp.xml  _fighter_8h.xml  _fighter_test_8cpp.xml  _fighter_test_8h.xml  _item_8cpp.xml  _item_8h.xml  _r_e_a_d_m_e_8md.xml  _random_8h.xml  _test_runner_8cpp.xml  class_character.xml  class_character_test.xml  class_dice.xml  class_fighter.xml  class_fighter_test.xml  class_item.xml  classcontainer.xml  dir_33c78a012c8d08979f57a54a07694c46.xml  dir_36a319fdfa90daea3fe65386bde15ea1.xml  dir_95e29a8b8ee7c54052c171a88bb95675.xml  dir_a30f206eb85b936aebf778f8ca08be7c.xml  dir_d27ff1c24db4b8ed35c08a97f94ed8ec.xml  dir_f89abcb304c928c7d889aa5625570de5.xml  dir_fc43c8c3672b004373891ac3cf051763.xml  index.xml  indexpage.xml  item_container_8cpp.xml  item_container_8h.xml  main_8cpp.xml  md__2_users_2reuvenostrofsky_2_library_2_mobile_01_documents_2com_0iapple_0i_cloud_docs_2_concord8e15ade38d2d8c26e5cd08e83e9aecb.xml  namespace_cpp_unit.xml  namespace_random.xml  (+2 more)
Events/: EventData.h  EventLog.txt  eventlogger.txt
Game/: Game.cpp  Game.h
Item/: Armor.cpp  Armor.h  Belt.cpp  Belt.h  Boots.cpp  Boots.h  Helmet.cpp  Helmet.h  Item.cpp  Item.h  ItemDecorator.cpp  ItemDecorator.h  ItemEditor.cpp  ItemEditor.h  Ring.cpp  Ring.h  Shield.cpp  Shield.h  UnequipItem.cpp  UnequipItem.h  Weapon.cpp  Weapon.h  itemContainer.cpp  itemContainer.h
ItemSaves/: default_helmet.csv  heavy_armor.csv  light_armor.csv  medium_armor.csv  strong_sword.csv  weak_helmet.csv
Map/: MapObserver.cpp  MapObserver.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  cell.cpp  cell.h  map.cpp  map.h
MapSaves/: castle.csv  castle_courtyard.csv  castle_halls.csv  castle_kitchens.csv  castle_treasury.csv  dungeon_descent.csv  dungeon_entrance.csv  dungeon_lair.csv  dungeon_maze.csv  dungeon_pits.csv  halls.csv  hhhh.csv  test.csv  testsave.csv
Observer/: Observable.cpp  Observable.h  Observer.cpp  Observer.h
Observer/CharacterObserver/: CharacterDisplay.cpp  CharacterDisplay.h  FighterObserver.cpp  FighterObserver.h
Observer/GameObserver/: GameObserver.cpp  GameObserver.h
Observer/MapObserver/: MapObserver.cpp  MapObserver.h
Strategy/CharacterStrategy/: CharacterStrategy.cpp  CharacterStrategy.h
Tests/: TestRunner.cpp
TurnManager/: TurnManager.cpp  TurnManager.h
Utils/: utils.cpp  utils.h
(+154 files in other folders)
